--- a/tomato_all.html
+++ b/tomato_all.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" content="text/html" http-equiv="Content-type" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tomato all</title>
     <!-- Bootstrap CSS -->
     <link
@@ -10,6 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link href="css/responsive.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -18,23 +20,34 @@
         <div class="nav1">
           <div class="container">
             <div class="row">
-              <div class="col-md-4">
-                <img src="images/Logo2.png" alt="logo" />
+              <div class="col-md-3 col-sm-9 col-10">
+                <img class="logo" src="images/Logo.png" alt="logo" />
               </div>
-              <div class="offset-md-2 col-md-6">
+              <div class="offset-xl-2 col-xl-7 col-md-9 col-sm-3 col-2">
                 <input
-                  class="search"
+                  class="search d-none d-md-block"
                   type="search"
                   placeholder="Search"
                   aria-label="Search"
                   style="margin-left: auto"
                 />
                 <nav class="navbar navbar-expand-lg navbar-light">
-                  <div class="container" style="padding-right: 0">
-                    <div class="collapse navbar-collapse">
-                      <ul class="navbar-nav">
+                  <div class="container-fluid justify-content-end">
+                    <button
+                      class="navbar-toggler"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#navbarNav"
+                      aria-controls="navbarNav"
+                      aria-expanded="false"
+                      aria-label="Toggle navigation"
+                    >
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav align-items-end">
                         <li class="nav-item">
-                          <a class="nav-link" href="index.html">Home</a>
+                          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Company Profile</a>
@@ -61,7 +74,7 @@
         </div>
       </section>
       <section class="head2">
-        <img src="images/bgtomat.png" alt="bgtomat" />
+        <img src="images/bgtomat.png" alt="bgtomat" class="img-fluid mt-2" />
       </section>
     </header>
     <section class="main_t">
@@ -153,7 +166,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-4 d-flex justify-content-center mb-4">
+          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
             <a class="a-n" href="#">
               <div class="col_tomat">
                 <img src="images/tomato1.png" alt="tomato1" />
@@ -162,7 +175,7 @@
               </div>
             </a>
           </div>
-          <div class="col-4 d-flex justify-content-center mb-4">
+          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
             <a class="a-n" href="#">
               <div class="col_tomat">
                 <img src="images/tomato2.png" alt="tomato2" />
@@ -171,7 +184,7 @@
               </div>
             </a>
           </div>
-          <div class="col-4 d-flex justify-content-end mb-5">
+          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
             <a class="a-n" href="tomato_one.html">
               <div class="col_tomat">
                 <img src="images/tomato3.png" alt="tomato3" />
@@ -180,7 +193,7 @@
               </div>
             </a>
           </div>
-          <div class="col-4 d-flex content-center mb-5">
+          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
             <a class="a-n" href="#">
               <div class="col_tomat">
                 <img src="images/tomato4.png" alt="tomato4" />
@@ -189,7 +202,7 @@
               </div>
             </a>
           </div>
-          <div class="col-4 d-flex justify-content-center mb-5">
+          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
             <a class="a-n" href="#">
               <div class="col_tomat">
                 <img src="images/tomato5.png" alt="tomato5" />
@@ -198,7 +211,7 @@
               </div>
             </a>
           </div>
-          <div class="col-4 d-flex justify-content-end mb-5">
+          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
             <a class="a-n" href="#">
               <div class="col_tomat">
                 <img src="images/tomato6.png" alt="tomato6" />
@@ -207,7 +220,7 @@
               </div>
             </a>
           </div>
-          <div class="col-4 d-flex content-center mb-5">
+          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
             <a class="a-n" href="#">
               <div class="col_tomat">
                 <img src="images/tomato7.png" alt="tomato7" />
@@ -216,7 +229,7 @@
               </div>
             </a>
           </div>
-          <div class="col-4 d-flex justify-content-center mb-5">
+          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
             <a class="a-n" href="#">
               <div class="col_tomat">
                 <img src="images/tomato8.png" alt="tomato8" />
@@ -232,9 +245,9 @@
       <section class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-12">
               <nav class="navbar navbar-expand">
-                <ul class="navbar">
+                <ul class="navbar" style="padding-left: 0px">
                   <li class="nav-item">
                     <a class="nav-link" href="#" style="color: #ffffff">PROFILE</a>
                   </li>
@@ -259,8 +272,8 @@
                 </ul>
               </nav>
             </div>
-            <div class="col-md-4">
-              <div class="footer-row d-flex justify-content-end">
+            <div class="col-md-4 col-sm-12">
+              <div class="footer-row d-flex justify-content-center">
                 <a href="#" class="footer-row__item">
                   <img src="images/Ico_in.svg" alt="in" />
                 </a>
@@ -291,5 +304,10 @@
         </div>
       </section>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
