--- a/tomato_one.html
+++ b/tomato_one.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" content="text/html" http-equiv="Content-type" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tomato one</title>
     <!-- Bootstrap CSS -->
     <link
@@ -11,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/responsive.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header class="header">
@@ -18,23 +20,34 @@
         <div class="nav1">
           <div class="container">
             <div class="row">
-              <div class="col-md-4">
-                <img src="images/Logo2.png" alt="logo" />
+              <div class="col-md-3 col-sm-9 col-10">
+                <img class="logo rounded mx-auto d-block" src="images/Logo.png" alt="logo" />
               </div>
-              <div class="offset-md-2 col-md-6">
+              <div class="offset-xl-2 col-xl-7 col-md-9 col-sm-3 col-2">
                 <input
-                  class="search"
+                  class="search d-none d-md-block"
                   type="search"
                   placeholder="Search"
                   aria-label="Search"
                   style="margin-left: auto"
                 />
                 <nav class="navbar navbar-expand-lg navbar-light">
-                  <div class="container" style="padding-right: 0">
-                    <div class="collapse navbar-collapse">
-                      <ul class="navbar-nav">
+                  <div class="container-fluid justify-content-end">
+                    <button
+                      class="navbar-toggler"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#navbarNav"
+                      aria-controls="navbarNav"
+                      aria-expanded="false"
+                      aria-label="Toggle navigation"
+                    >
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav align-items-end">
                         <li class="nav-item">
-                          <a class="nav-link" href="index.html">Home</a>
+                          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Company Profile</a>
@@ -61,11 +74,11 @@
         </div>
       </section>
     </header>
-    <section class="main1002">
+    <section class="main1002 mt-2">
       <div class="container">
         <div class="row">
           <div class="col-xl-2">
-            <a class="a-n" href="#">
+            <a class="a-n" href="tomato_all.html">
               <div class="arow">
                 <h5>Return to all tomatoes</h5>
               </div>
@@ -75,7 +88,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-xl-6">
+          <div class="col-xl-6 col-md-6">
             <div class="main_tx">
               <h1>TAG 1002 (TAG 809)</h1>
               <h2>Tomato Determinate Red Standard Round</h2>
@@ -83,18 +96,25 @@
             </div>
             <div class="main_tr">
               <div class="row">
-                <div class="col-xl-2">
+                <div class="col-xl-2 col-md-3 col-3">
                   <img src="images/unionr.svg" />
                 </div>
-                <div class="col-xl-7">
+                <div class="col-xl-7 col-md-9 col-9">
                   <h1>Very high yield and excellent fruits quality!</h1>
                 </div>
               </div>
             </div>
-            <div class="tom_ch">CHARACTERISTICS</div>
           </div>
-          <div class="col-xl-6 d-flex justify-content-end">
-            <img src="images/tag1002.png" alt="tag1002" />
+          <div class="offset-xl-1 col-xl-5 offset-md-1 col-md-5">
+            <img src="images/tag1002.png" alt="tag1002" class="img-fluid" />
+            <div class="col-xl-12 d-flex justify-content-end mb-2">
+              <a href="#" class="a-n">
+                <div class="i_circle">
+                  <img src="images/ico_pdf.svg" alt="pdf" />
+                  <p>Download pdf</p>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -102,19 +122,12 @@
         <div class="tomato_li">
           <div class="row">
             <div class="col-xl-5">
+              <h5>CHARACTERISTICS</h5>
               <p>
                 Resistance <br />
                 HR: ToMV:0-2; Fol: 1,2; Ve/Vd; <br />
                 IR: TYLCV
               </p>
-            </div>
-            <div class="offset-xl-4 col-xl-3 d-flex justify-content-end">
-              <a href="#" class="a-n">
-                <div class="i_circle">
-                  <img src="images/ico_pdf.svg" alt="pdf" />
-                  <p>Download pdf</p>
-                </div>
-              </a>
             </div>
           </div>
           <div class="row">
@@ -154,9 +167,9 @@
       <section class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-12">
               <nav class="navbar navbar-expand">
-                <ul class="navbar">
+                <ul class="navbar" style="padding-left: 0px">
                   <li class="nav-item">
                     <a class="nav-link" href="#" style="color: #ffffff">PROFILE</a>
                   </li>
@@ -181,8 +194,8 @@
                 </ul>
               </nav>
             </div>
-            <div class="col-md-4">
-              <div class="footer-row d-flex justify-content-end">
+            <div class="col-md-4 col-sm-12">
+              <div class="footer-row d-flex justify-content-center">
                 <a href="#" class="footer-row__item">
                   <img src="images/Ico_in.svg" alt="in" />
                 </a>
@@ -213,5 +226,10 @@
         </div>
       </section>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
